@@ -1,7 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
 export(comm.fread)
-export(deltime)
 import(pbdMPI)
 importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
