@@ -8,7 +8,6 @@
 #' @return
 #' "elapsed" component of current proc.time().
 #' 
-#' @export
 deltime <- function(ltime=proc.time()["elapsed"], text=NULL) {
     time <- proc.time()["elapsed"]
     if(!is.null(text))
